--- a/index.html
+++ b/index.html
@@ -5,8 +5,18 @@
     <title>CSS GRID Layout</title>
     <link rel="stylesheet" href="style.css">
     <link rel="stylesheet" href="normalize.css">
+    <link rel="stylesheet" href="page.css">
   </head>
   <body>
+    <div class="grid">
+      <div class="item">1</div>
+      <div class="item">2</div>
+      <div class="item">3</div>
+      <div class="item">4</div>
+      <div class="item">5</div>
+      <div class="item">6</div>
+    </div>
+
 
     <script src="main.js" charset="utf-8"></script>
   </body>
