--- a/index.html
+++ b/index.html
@@ -6,19 +6,14 @@
     <link rel="stylesheet" href="style.css">
     <link rel="stylesheet" href="normalize.css">
     <link rel="stylesheet" href="page.css">
+    <link href='https://fonts.googleapis.com/css?family=Varela+Round' rel='stylesheet' type='text/css'>
   </head>
   <body>
-    <div class="grid">
-      <div class="item">1</div>
-      <div class="item">2</div>
-      <div class="item">3</div>
-      <div class="item">4</div>
-      <div class="item">5</div>
-      <div class="item">6</div>
-      <div class="item">7</div>
-      <div class="item">8</div>
-      <div class="item">9</div>
-      <div class="item">10</div>
+    <div class="container">
+      <header>Header</header>
+      <main>Main</main>
+      <aside>Aside</aside>
+      <footer>Footer</footer>
     </div>
 
 
