--- a/index.html
+++ b/index.html
@@ -11,11 +11,12 @@
   <body>
     <div class="container">
       <header>Header</header>
+      <nav>Nav</nav>
       <main>Main</main>
       <aside>Aside</aside>
       <footer>Footer</footer>
     </div>
-    
+
     <script src="main.js" charset="utf-8"></script>
   </body>
 </html>
